jira_clone/force-app/main/default/objects/ValidateField__c/ValidateField__c.object-meta.xml
<CustomObject>
    <description>Field-level validation definitions</description>
    <label>Validate Field</label>
    <nameField>
        <displayFormat>VF-{0000}</displayFormat>
        <label>Validate Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validate Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>