jira_clone/force-app/main/default/objects/ValidateField__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Message shown when validation fails</description>
    <label>Error Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>