jira_clone/force-app/main/default/objects/ValidateField__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>API name of the Ticket field to validate</description>
    <label>Field Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AssignedTo__c</fullName>
            </value>
            <value>
                <fullName>CurrentState__c</fullName>
            </value>
            <value>
                <fullName>Creator__c</fullName>
            </value>
            <value>
                <fullName>Description__c</fullName>
            </value>
            <value>
                <fullName>EndDate__c</fullName>
            </value>
            <value>
                <fullName>Epic__c</fullName>
            </value>
            <value>
                <fullName>Priority__c</fullName>
            </value>
            <value>
                <fullName>Score__c</fullName>
            </value>
            <value>
                <fullName>Sprint__c</fullName>
            </value>
            <value>
                <fullName>StartDate__c</fullName>
            </value>
            <value>
                <fullName>StoryPoint__c</fullName>
            </value>
            <value>
                <fullName>Summary__c</fullName>
            </value>
            <value>
                <fullName>Ticket_Type__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>