jira_clone/force-app/main/default/objects/ValidateField__c/fields/RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>RecordStatus__c</fullName>
    <description>Record status indicator</description>
    <label>Record Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <default>true</default>
                <label>active</label>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>