jira_clone/force-app/main/default/objects/ValidateField__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Validation type</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Isn't Empty</fullName>
                <default>true</default>
                <label>Isn't Empty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>