jira_clone/force-app/main/default/objects/ValidateField__c/fields/WorkflowTransition__c.field-meta.xml
<CustomField>
    <fullName>WorkflowTransition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Workflow transition this field validation applies to</description>
    <label>Workflow Transition</label>
    <referenceTo>WorkflowTransition__c</referenceTo>
    <relationshipLabel>Validate Fields</relationshipLabel>
    <relationshipName>ValidateFields</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>